@@ -1,0 +1,5 @@
+#as: -n32 -KPIC
+#source: macro-warn-1.s
+#stderr: macro-warn-1-n32.l
+#objdump: -p
+#pass
