@@ -1,0 +1,3 @@
+.*: Assembler messages:
+.*:5: Warning: Macro instruction expanded into multiple instructions
+.*:9: Warning: Macro instruction expanded into multiple instructions.*slot
