@@ -1,0 +1,5 @@
+#as: -32
+#source: macro-warn-3.s
+#stderr: macro-warn-3.l
+#objdump: -p
+#pass
